FrontEnd/css/header.css
/* Header */
	.header {
		position: sticky;
		position: -webkit-sticky; /* Safari */
		top: 0;
		z-index: 12;
		background-color: white;
		padding: 15px 0 5px 0 ;
		border-bottom: 3px solid #e1e1e1;
	}

	.header .smallmenu {
		display: none;
	}

	/* Logo */
		.header .logo {
			width: 250px;
			height: 60px;
			float: left;
			transition-duration: .1s;
		}
		.header .logo:hover {
			transform: scale(1.05)
		}
		.header .logo img {
			width: 100%;
			height: 100%;
			vertical-align: middle;
		}
	/* ======= End logo ======== */

	/* Content */
		.header .content{
			/* tru width cua logo */
			width: calc(100% - 250px);
			float: left;
		}

		/* Search */
			.search-header {
				float: left;
			}

			form.input-search {
				margin-left: 20px;
				background: #ddd;
				border: 2px solid #bbb;
				border-radius: 10px;
				height: 35px;
				width: 300px;
				/* điều chỉnh width của ô tìm kiếm trên header ở đây */
			}
			.input-search input {
				float: left;
				padding-left: 15px;
				border: none;
				border-radius: 10px 0 0 10px;
				height: 100%;
				width: calc(100% - 100px - 20px);
				/* 100 la width button, 20 la padding button */
			}
			.input-search button {
				float: right;
				font-size: 14px;
				font-weight: bold;
				padding: 0 10px;
				color: #888;
				background: none;
				width: 100px;
				height: 100%;
				border: none;
				cursor: pointer;
				-webkit-transition-duration: .3s;
				     -o-transition-duration: .3s;
				        transition-duration: .3s;
			}
			.input-search button:hover {
				color: #000;
			}

			.tags {
				margin: 5px 0 0 20px;
				font-size: 13px;
			}
			.tags a {
				color: gray;
				padding: 0 5px;
			}
			.tags a:hover {
				color: black;
				text-decoration: underline;
			}

			/* W3 school autocomplete */
				.autocomplete {
					/*the container must be positioned relative:*/
					position: relative;
					height: 100%;
				}
				.autocomplete-items {
					position: absolute;
					border: 1px solid #d4d4d4;
					border-bottom: none;
					border-top: none;
					z-index: 99;
					/*position the autocomplete items to be the same width as the container:*/
					top: 100%;
					left: 0;
					right: 0;
				}
				.autocomplete-items div {
					padding: 10px;
					cursor: pointer;
					background-color: #fff; 
					border-bottom: 1px solid #d4d4d4; 
				}
				.autocomplete-items div:hover {
					/*when hovering an item:*/
					background-color: #e9e9e9; 
				}
				.autocomplete-active {
					/*when navigating through the items using the arrow keys:*/
					background-color: DodgerBlue !important; 
					color: #ffffff; 
				}
			/* End auto complete */
		/* ======= End search ========== */

		/* Tools Member */
			.tools-member {
				float: right;
				display: table;
				margin-left: 10px;
				font-size: 14px;
			}

			.tools-member a {
				position: relative;
				padding: 5px 0;
				text-align: center;
				font-size: 16px;
				font-weight: bold;
				color: #565;
				cursor: pointer;
			}
			.tools-member a:hover > i {
				border: 1px solid #fff;
				background-color: rgb(161, 161, 161);
				color: #fff;
			}

			.tools-member i { /* icon */
				padding: 10px;
				border-radius: 50%;
				border: 1px solid #ccc;
				background-color: #fff;
				color: #000;
				-webkit-transition: 0.2s;
				-o-transition: 0.2s;
				transition: 0.2s;
			}
			.tools-member .fa-user {
				padding: 10px 12.5px;
			}
			.tools-member .fa-shopping-cart {
				padding: 10px 11px;
			}
			/* Member */
				.member {
					position: relative;
					float: left;
					display: table-cell;
				}
				.member:hover > .menuMember{
					z-index: 20;
					transform: translateX(-40%) scale(1);
				}
				.member .menuMember {
					position: absolute;
					left: 0;
					text-align: center;
					border-radius: 5px;
					background-color: #eee;
					min-width: 170px;
					transition-duration: .15s;
					transform: translateX(-40%) scale(0);
				}
				.member .menuMember a {
					display: block;
					padding: 10px 0;
				}
				.member .menuMember a:hover {
					background-color: #888;
					color: #eee;
				}
				.member .hide {
					display: none;
				}
			/* ======= End Member ======= */

			/* Cart */
				.cart {
					float: left;
					display: table-cell;
					/* border-left: 1px solid #bbb; */
					margin: 0 15px; 
					padding-left: 5px;
				}
				.cart-number {
					position: absolute;
					left: 1.4em;
					bottom: -1em;
					font-weight: bold;
					font-size: 1em;
					color: red;
					border-radius: 50%;
					width: 2em;
					height: 2em;
					line-height: 2em;
					text-align: center;
				}
				.cart .cart-number {
					transition-duration: .4s; 
				}
			/* ======= End Cart ======== */

			/* Check Order - Đã loại bỏ */
				.check-order {
					float: left;
					display: table-cell;
					border-left: 1px solid #bbb;
					margin-left: 5px;
					padding-left: 5px; 
				}
			/* ======= End Check Order ======= */
		/* ======= End Tools Member ======= */
	/* ======= End Content ========= */
/* ======= End header ======== */


@media only screen and (max-width: 768px){
    .header .smallmenu {
		display: block;
		float: left;
		font-size: 25px;
		font-weight: 700;
		margin-left: 10px; 
	}
    .header .logo{
        float: none;
        width: 40%;
        height: 40px;
        margin-right: auto;
        margin-left: auto;
    }
    .header .content{
        float: none;
        width: 100%;
        margin-top: 5px;
        max-height: 0;
        overflow: hidden;
  		transition: max-height 0.2s ease-out;
    }
    .search-header
    {
    	float: none;
    	width: 90%;
    	margin-right: auto;
        margin-left: auto;
    }
    form.input-search
    {
    	float: none;
        width: 97%;
        margin-right: auto;
        margin-left: auto;
    }
    .input-search input
    {
    	padding-left: 5px;
    	width: calc(100% - 100px - 5px);
    }
    .tags
    {
		float: none;
		width: 100%;
        margin: 5px 0 0 0;
        text-align: center;
    }
    .tags a
    {
		padding: 0 0 0 5px;
	}
    .tools-member
    {
    	float: none;
        width: 100%;
        margin: 0;
    }
    .member, .cart
    {
    	float: left;
    	width: 50%;
    	/*height: 35px;*/
    	margin: 0;
    	text-align: center;
    	padding: 0;
    }
}

